# uniparser-grammar-eastern-armenian

./: .gitignore  LICENSE  LICENSE.md  MANIFEST.in  README.md  armenian_disambiguation.cg3  hye-lexemes-A.txt  hye-lexemes-ADV.txt  hye-lexemes-V.txt  hye-lexemes-rest.txt  paradigms.txt  pre_build.py  script.py  setup.cfg
finalizer/: gramm_finalizer.py  paradigms.txt
source/: ArmDict_for_lexemes.txt  dict6000.csv  for_parser.csv  script_verbs.py
uniparser_eastern_armenian/: __init__.py
