[metadata]
name = uniparser-eastern-armenian
version = 2.1.2
author = Timofey Arkhangelskiy <timarkh@gmail.com>, Alexei Fedorenko, Victoria Khurshudyan, Alexey Polyakov
author_email = timarkh@gmail.com
description = Rule-based morphological analysis for Eastern Armenian
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timarkh/uniparser-grammar-eastern-armenian
project_urls =
    Bug Tracker = https://github.com/timarkh/uniparser-grammar-eastern-armenian/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Text Processing :: Linguistic

[options]
packages = find:
python_requires = >=3.7
install_requires =
	uniparser-morph>=2.2.0
	importlib-resources
include_package_data = True
